# p13n-eval-harness

./: .gitignore  README.md  pyproject.toml  requirements.txt
multibench/: __init__.py  args.py  cli.py  client.py  utils.py
multibench/benchmarks/bigtom/: run.py
multibench/benchmarks/lamp/: run.py
multibench/benchmarks/lamp/data_utils/: labels.py
multibench/benchmarks/lamp/prompts/: contriever_retriever.py  prompts.py
multibench/benchmarks/lampqa/: run.py
multibench/benchmarks/personalens/: run.py
multibench/benchmarks/personalens/src/: evaluate_dialogue.py  generate_dialogue.py
multibench/benchmarks/personalens/util/: assistant_prompts.py  evaluation_prompts.py  gather_evaluation.py
multibench/benchmarks/personamem/: inference.py  inference_utils.py  prompts.py  query_llm.py  run.py
multibench/benchmarks/personamem/data_generation/: config.yaml  utils.py
multibench/benchmarks/prefeval/: config.yaml  run.py
multibench/benchmarks/prefeval/utils/: common_utils.py  explicit_utils.py  implicit_utils.py  mcq_implicit_utils.py  utils_mcq.py
multibench/benchmarks/sotopia/: core.py  run.py  sotopia_scenarios.json
scripts/: eval_3models.sh  eval_lamp_4models.sh  eval_one_model.sh  eval_qwen3_14b_3models.sh  eval_v4_models.sh  run_all.sh  run_bigtom.sh  run_lamp.sh  run_lampqa.sh  run_personamem.sh  run_prefeval.sh  run_prefeval_gen.sh  run_prefeval_judge_local.sh  run_sotopia.sh  serve_v4_loras.sh  summarize.py
